# individuals_bot

./: README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/models/: __init__.py  girl.py  user.py
bot/: .gitignore  Dockerfile  README.md  pyproject.toml
bot/bot/: constants.py  db.py  filters.py  main.py
